[project]
name = "iSeek"
version = "0.1.0"
requires-python = ">=3.9"
description = "iSeek is all you need for AI in Medical Imaging."
authors = [
    { name = "HaHa", email = "haha@example.com" },
    { name = "iSeek" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'image segmentation',
    'semantic segmentation',
    'medical image analysis',
    'medical image segmentation',
    'quantification',
]
dependencies = [
    "nnunetv2",
    "segmentation-models-pytorch",
    "monai",
    "rich",
    "prettytable",
    "openpyxl",
    "opencv-python",
]

[project.scripts]
iSeek-train = "iseek.pipelines.training.run.run_training:run_training_entry"
iSeek-segment = "iseek.pipelines.inference.run_segmentation:predict_entry_point"
iSeek-eval = "iseek.pipelines.evaluation.evaluation_vessel_seg:run_evaluation"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.codespell]
skip = '.git,*.pdf,*.svg'
#
# ignore-words-list = ''
